# Faily

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/skills/: test-faily.md
faily/: __init__.py
faily/core/: characters.py  model_manager.py
faily/modules/: foley.py  tts.py  vc.py
faily/ui/: app.py  components.py
faily/ui/tabs/: characters_tab.py  foley_tab.py  tts_tab.py  tune_tab.py  vc_tab.py
scripts/: test_faily.sh
